--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,43 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "next",
+        "prettier"
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@next/next"
+    ],
+    "rules": {
+        "semi": ["off", "always"],
+        "no-extra-semi": "error",
+        "semi-style": ["error", "last"],
+        "sort-imports": ["error", { "ignoreDeclarationSort": true }],
+        "quotes": ["error", "single"],
+        "no-console": ["error", { "allow": ["warn", "error"] }],
+        "comma-dangle": "off",
+        "@typescript-eslint/comma-dangle": "off",
+        "jsx-quotes": "off",
+        "block-spacing": "error",
+        "object-curly-spacing": [2, "always"],
+        "no-duplicate-imports": "error",
+        "react/display-name": "off",
+        "prettier/prettier": ["error", {
+            "endOfLine": "auto",
+            "singleQuote": true,
+            "trailingComma": "all",
+            "printWidth": 80,
+            "tabWidth": 2,
+            "useTabs": false
+        }, { "usePrettierrc": true }],
+        "react-hooks/exhaustive-deps": "warn"
+    }
 }
